Finished Lab1 fully

--- a/Lab1/Q2/Q2.css
+++ b/Lab1/Q2/Q2.css
@@ -1,3 +1,8 @@
+/* My code still works perfectly without css
+ but I just added borders
+ to make it look a bit nicer*/
+
+
 th {
   text-align: left;
 }
