--- a/Web Design Project/css/footer.css
+++ b/Web Design Project/css/footer.css
@@ -21,26 +21,28 @@ footer{
     margin-bottom:32px;
 }
 
+/*footer logo*/
 .footer_logo{
     font-size: 200%;
     font-family: 'Lato', sans-serif;
     font-weight:900;
     color:darkgoldenrod;
 }
-
+/* for the text under brand*/
 h2{
     font-size: 140%;
 }
-
+/*Footer list*/
 .footer ul{
     list-style-type:none;
     padding-left:0;
 }
-
+/*Footer list elements*/
 .footer li{
     line-height: 250%;
 }
 
+/*Footer text*/
 .footer a{
     text-decoration:none;
 }
@@ -74,7 +76,7 @@ h2{
     padding-right:20%;
     color:white;
 }
-
+/*this is for each social media logo*/
 .social-media a {
     width: 50px;
     height: 50px;
